stm32f030 USART1 DMA RX TX
stm32f030 USART1 DMA RX TX

--- a/MDK-ARM/hfs32/hfs32.build_log.htm
+++ b/MDK-ARM/hfs32/hfs32.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TARMCM1.DLL V1.14.0.0
  
 <h2>Project:</h2>
-G:\hfs32\hfs32\MDK-ARM\hfs32.uvprojx
+G:\caneers\hfs32\hfs32\MDK-ARM\hfs32.uvprojx
 Project File Date:  07/01/2019
 
 <h2>Output:</h2>
@@ -54,7 +54,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:03
+Build Time Elapsed:  00:00:04
 </pre>
 </body>
 </html>
