--- a/MDK-ARM/hfs32/hfs32.build_log.htm
+++ b/MDK-ARM/hfs32/hfs32.build_log.htm
@@ -21,15 +21,39 @@ Target DLL:      STLink\ST-LINKIII-KEIL_SWO.dll V3.0.1.0
 Dialog DLL:      TARMCM1.DLL V1.14.0.0
  
 <h2>Project:</h2>
-G:\caneers\hfs32\hfs32\MDK-ARM\hfs32.uvprojx
-Project File Date:  07/01/2019
+G:\hfs32\hfs32\MDK-ARM\hfs32.uvprojx
+Project File Date:  07/04/2019
 
 <h2>Output:</h2>
 *** Using Compiler 'V5.06 update 6 (build 750)', folder: 'C:\Keil_v5\ARM\ARMCC\Bin'
 Build target 'hfs32'
+assembling startup_stm32f030x6.s...
+compiling stm32f0xx_it.c...
 compiling main.c...
+compiling stm32f0xx_hal_msp.c...
+compiling stm32f0xx_hal_adc.c...
+compiling stm32f0xx_hal_adc_ex.c...
+compiling stm32f0xx_hal_rtc_ex.c...
+compiling stm32f0xx_hal_rtc.c...
+compiling stm32f0xx_hal_tim.c...
+compiling stm32f0xx_hal_tim_ex.c...
+compiling stm32f0xx_hal_uart_ex.c...
+compiling stm32f0xx_hal_uart.c...
+compiling stm32f0xx_hal_rcc.c...
+compiling stm32f0xx_hal_rcc_ex.c...
+compiling stm32f0xx_hal.c...
+compiling stm32f0xx_hal_i2c.c...
+compiling stm32f0xx_hal_i2c_ex.c...
+compiling stm32f0xx_hal_dma.c...
+compiling stm32f0xx_hal_gpio.c...
+compiling stm32f0xx_hal_cortex.c...
+compiling stm32f0xx_hal_pwr.c...
+compiling stm32f0xx_hal_pwr_ex.c...
+compiling stm32f0xx_hal_flash.c...
+compiling stm32f0xx_hal_flash_ex.c...
+compiling system_stm32f0xx.c...
 linking...
-Program Size: Code=7596 RO-data=232 RW-data=16 ZI-data=1424  
+Program Size: Code=9688 RO-data=232 RW-data=28 ZI-data=1604  
 FromELF: creating hex file...
 "hfs32\hfs32.axf" - 0 Error(s), 0 Warning(s).
 
@@ -54,7 +78,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.1.2
-Build Time Elapsed:  00:00:04
+Build Time Elapsed:  00:00:48
 </pre>
 </body>
 </html>
